# product-injuries-pipeline

./: .gitignore  README copy.md  README.md  deployment.py  docker-compose.yml  flow-deployment.yaml  healthcheck-deployment.yaml  my_flows.py  pyproject.toml  test.yaml
airbyte/: Dockerfile
data_pipeline/: flow.py
data_pipeline/blocks/: prefect_dbt_block.py
data_pipeline/raw_etl/: etl.py
data_pipeline/raw_etl/transformers/: injuries.py
dbt/: dbt_project.yml
dbt/macros/: flatten_json.sql
dbt/models/: sources.yml
dbt/models/final/: injuries.sql  injuries_by_age.sql  injuries_by_products_top10.sql
dbt/models/raw/: raw_injuries.sql  raw_products.sql
dbt/models/staging/: injuries_enriched.sql  injuries_flattened.sql  products_flattened.sql
pipeline/: extract_raw_data.py  injuries_flow.py  testing.ipynb  transform_data.py
raw_data_pipeline/: etl.py  flow.py  raw_data_client.py
src/: common.py  etl.py  flow.py  injuries_flow.py  testing.ipynb  transform_data.py
src/pipelines/raw_to_staging_etl/: common.py  injuries_etl.py  products_etl.py  raw_to_staging_etl.py
src/transformers/: products.py
