
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "matszewczyk", email = "mateusz.szewczyk@yahoo.com"},
]
dependencies = [
    "fastapi>=0.95.1",
    "pandas>=2.0.1",
    "minio>=7.1.14",
    "wget>=3.2",
    "requests>=2.30.0",
    "prefect>=2.10.11",
    "prefect-aws>=0.3.2",
    "prefect-docker>=0.2.3",
    "prefect-github>=0.1.5",
    "prefect-azure>=0.2.8",
    "adlfs>=2023.4.0",
    "azure>=5.0.0",
    "deltalake>=0.10.0",
    "dbt-postgres>=1.5.2",
    "prefect-airbyte>=0.2.0",
    "prefect-dbt>=0.3.1",
    "prefect-sqlalchemy>=0.2.4",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.3.1",
]
dev = [
    "ipykernel>=6.23.1",
]
